Bug 308380 - Canceling change of difficulty level restarts the current game
Summary: Canceling change of difficulty level restarts the current game
Status: RESOLVED FIXED
Alias: None
Product: knavalbattle
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Roney Gomes
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-14 15:07 UTC by Albert Astals Cid
Modified: 2012-11-24 19:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2012-10-14 15:07:09 UTC
When changing the difficulty level while a game is running selecting Cancel actually does not cancel and the game is restarted anyway

Reproducible: Always

Steps to Reproduce:
1. Start a game
2. Try to change the difficulty level
3. On the dialog choose cancel
Actual Results:  
The game is restarted anyway

Expected Results:  
The game is not restarted
Comment 1 Roney Gomes 2012-10-27 22:11:48 UTC
(In reply to comment #0)
Hi Albert. A patch to solve this bug has already been made and it's just waiting for revision on Review Board.
Comment 2 Roney Gomes 2012-11-19 00:26:51 UTC
Git commit 2ca2c795f2614d963241d00f3594dc7d047850b8 by Roney Gomes.
Committed on 18/11/2012 at 19:07.
Pushed by roneygomes into branch 'master'.

Fix the bug which restarted a game after cancelling change of level.

Rather than connect the levelChanged() slot to the
selectedLevelChanged() signal it is now connected to the
currentLevelChanged() slot, which makes more sense and solves the bug
which restarted the game even if the player pressed the "Cancel" button
of the warning dialog.
REVIEW: 107053

M  +3    -1    src/mainwindow.cpp

http://commits.kde.org/knavalbattle/2ca2c795f2614d963241d00f3594dc7d047850b8
Comment 3 Roney Gomes 2012-11-19 00:26:51 UTC
Git commit 2ca2c795f2614d963241d00f3594dc7d047850b8 by Roney Gomes.
Committed on 18/11/2012 at 19:07.
Pushed by roneygomes into branch 'master'.

Fix the bug which restarted a game after cancelling change of level.

Rather than connect the levelChanged() slot to the
selectedLevelChanged() signal it is now connected to the
currentLevelChanged() slot, which makes more sense and solves the bug
which restarted the game even if the player pressed the "Cancel" button
of the warning dialog.
REVIEW: 107053

M  +3    -1    src/mainwindow.cpp

http://commits.kde.org/knavalbattle/2ca2c795f2614d963241d00f3594dc7d047850b8
Comment 4 Albert Astals Cid 2012-11-19 18:52:07 UTC
Two things, do you plan backporting this fix to the 4.9 branch? Also you should set the version fixed in to the version the fix will be in (i.e. 4.10.0 if no backport 4.9.4 if you do the backport)
Comment 5 Roney Gomes 2012-11-20 00:54:27 UTC
(In reply to comment #4)
> Two things, do you plan backporting this fix to the 4.9 branch? Also you
> should set the version fixed in to the version the fix will be in (i.e.
> 4.10.0 if no backport 4.9.4 if you do the backport)

Didn't think about that, I have to say.

Backporting it seems important, I would really appreciate to make it available as soon as possible. Unluckly I don't know how to do this. :-(

Will look for information on Tech Base and solve it as fast as I can. Thanks for the reminder.
Comment 6 Albert Astals Cid 2012-11-21 00:06:30 UTC
just commit it to the KDE/4.9 branch
Comment 7 Roney Gomes 2012-11-24 17:23:55 UTC
Git commit b51b9bc4785d43c9bcbf4604bd0846f88172a5d8 by Roney Gomes.
Committed on 18/11/2012 at 19:07.
Pushed by roneygomes into branch 'KDE/4.9'.

Fix the bug which restarted a game after cancelling change of level.

Rather than connect the levelChanged() slot to the
selectedLevelChanged() signal it is now connected to the
currentLevelChanged() slot, which makes more sense and solves the bug
which restarted the game even if the player pressed the "Cancel" button
of the warning dialog.
REVIEW: 107053

M  +3    -1    src/mainwindow.cpp

http://commits.kde.org/knavalbattle/b51b9bc4785d43c9bcbf4604bd0846f88172a5d8
Comment 8 Roney Gomes 2012-11-24 17:23:55 UTC
Git commit b51b9bc4785d43c9bcbf4604bd0846f88172a5d8 by Roney Gomes.
Committed on 18/11/2012 at 19:07.
Pushed by roneygomes into branch 'KDE/4.9'.

Fix the bug which restarted a game after cancelling change of level.

Rather than connect the levelChanged() slot to the
selectedLevelChanged() signal it is now connected to the
currentLevelChanged() slot, which makes more sense and solves the bug
which restarted the game even if the player pressed the "Cancel" button
of the warning dialog.
REVIEW: 107053

M  +3    -1    src/mainwindow.cpp

http://commits.kde.org/knavalbattle/b51b9bc4785d43c9bcbf4604bd0846f88172a5d8