Fix the bug which restarted a game after cancelling change of level.

Rather than connect the levelChanged() slot to the
selectedLevelChanged() signal it is now connected to the
currentLevelChanged() slot, which makes more sense and solves the bug
which restarted the game even if the player pressed the "Cancel" button
of the warning dialog.

BUG: 308380
CCBUG: 308380
REVIEW: 107053